# Phonons

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
inputs/: dynamical-matrix
